@@ -22,6 +22,10 @@ Changes log
           triples, statements or relationships).
         - Moved o.r.u.Helper class, used privately by API classes to the
           o.r.engine package.
+        - Added MediaType constants APPLICATION_RDF_TRIG, 
+          APPLICATION_RDF_TRIX, APPLICATION_RDF_TURTLE, 
+          APPLICATION_SPARQL_RESULTS_XML and
+          APPLICATION_SPARQL_RESULTS_JSON for RDF and SPARQL.
     - Misc
         - JAX-RS extension:
             - added class ExendedUriBuilder with "file" extensions for
